[package]
name = "zero-to-production-axum"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero-to-production-axum"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
axum = "0.8.1"
